# universal-plugin-update-manager

./: .gitignore  README.md  TODO.md  config.default.toml  history.js  incremental-scan.md  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  rust_out
.github/workflows/: ci.yml
audio-engine/: CMakeLists.txt  Cargo.toml  README.md
audio-engine/helper-app/: Info.plist
audio-engine/src/: AppLog.cpp  AppLog.hpp  CocoaHelpers.hpp  CocoaHelpers.mm  CrashHandler.cpp  CrashHandler.hpp  Engine.cpp  Engine.hpp  Main.cpp  ParentWatchdog.cpp  ParentWatchdog.hpp  VisualPreview.cpp  main.rs  playback.rs
docs/: ALS_GENERATION_FINDINGS.md  ALS_GENERATION_GUIDE.md  CLIP_TIMING_REFERENCE.md  ID_MANAGEMENT.md  README.md  SAMPLE_CATEGORIZATION.md  TECHNO_ARRANGEMENT_RULES.md  build-meta.js  hud-theme.js  index.html  instructions.md
docs/api/: crates.js  help.html  settings.html  src-files.js
docs/test_als/: roundtrip_test.als
docs/tutorial/: 01-welcome.html  02-settings.html  03-walkers.html  04-plugins.html  05-samples.html  06-analysis.html  07-daw.html  08-midi-presets-pdf.html  09-palette.html  10-player.html  11-tray.html  12-favorites-notes-tags.html  13-files.html  14-history.html  15-visualizer.html  17-theme.html  (+4 more)
frontend/: audio-scanner-worker.js  history.js  index.html  main.js  preload.js  scanner-worker.js  scanner.js  tray-popover.html  update-worker.js
i18n/: app_i18n_cs.json  app_i18n_da.json  app_i18n_de.json  app_i18n_el.json  app_i18n_en.json  app_i18n_es.json  app_i18n_es_419.json  app_i18n_fi.json  app_i18n_fr.json  app_i18n_hi.json  app_i18n_hu.json  app_i18n_id.json  app_i18n_it.json  app_i18n_ja.json  app_i18n_ko.json  app_i18n_nb.json  app_i18n_nl.json  app_i18n_pl.json  app_i18n_pt.json  app_i18n_pt_br.json  app_i18n_ro.json  app_i18n_ru.json  app_i18n_sv.json  app_i18n_tr.json  app_i18n_uk.json  app_i18n_vi.json  app_i18n_zh.json
scripts/: README-i18n.md  apply_context_menu_i18n.py  build-audio-engine.mjs  build.sh  bust.sh  clean.sh  cyberpunk.sh  db-stats.sh  db-vacuum.sh  de_i18n_manual_overrides.py  deploy.sh  fill_all_locale_i18n_gaps.py  fill_de_i18n_gaps.py  gen_all_app_i18n_locales.py  gen_app_i18n_cs.py  gen_app_i18n_da.py  gen_app_i18n_de.py  gen_app_i18n_el.py  gen_app_i18n_en.py  gen_app_i18n_es.py  gen_app_i18n_es_419.py  gen_app_i18n_hi.py  gen_app_i18n_hu.py  gen_app_i18n_id.py  gen_app_i18n_nb.py  gen_app_i18n_pt.py  gen_app_i18n_pt_br.py  gen_app_i18n_ro.py  gen_app_i18n_sv.py  gen_app_i18n_zh.py  gen_toast_i18n_en.py  i18n_catalog_audit.py  merge_batch_into_locales.py  merge_i18n_keys.py  nuke.sh  postbundle-audio-engine-helper.sh  prepare-audio-engine-audioengine.mjs  prepare-audio-engine-sidecar.mjs  rebuild.sh  run-js-tests.mjs  (+5 more)
src-tauri/: Cargo.toml  Entitlements.plist  app_i18n_de.json  app_i18n_en.json  app_i18n_es.json  app_i18n_sv.json  build.rs  tauri.conf.json  toast_i18n_en.json
src-tauri/benches/: benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: generate_empty_als.rs  generate_schranz_project.rs  generate_techno_project.rs  generate_toy_project.rs  generate_true_techno.rs  norm_gen.rs  sample_filters.rs
src-tauri/icons/: icon.icns
src-tauri/src/: als_generator.rs  als_project.rs  app_activity_macos.rs  app_i18n.rs  audio_engine.rs  audio_extensions.rs  audio_scanner.rs  audio_server.rs  audio_track_template.xml  bpm.rs  bulk_stat.rs  content_hash.rs  daw_scanner.rs  db.rs  file_watcher.rs  group_sidechain_compressor_template.xml  group_track_template.xml  history.rs  key_detect.rs  kvr.rs  lib.rs  lufs.rs  main.rs  master_eq8_hpf_template.xml  master_limiter_template.xml  midi.rs  midi_generator.rs  midi_scanner.rs  midi_track_template.xml  native_menu.rs  open_with_app.rs  path_norm.rs  pdf_meta.rs  pdf_scanner.rs  preset_scanner.rs  sample_analysis.rs  scanner.rs  scanner_skip_dirs.rs  similarity.rs  space_preview_macos.rs  (+11 more)
src-tauri/tests/: api_invariants.rs  app_i18n_test.rs  backend_handwritten_contracts.rs  backend_handwritten_db_ipc_json.rs  backend_handwritten_history_serde_roundtrips.rs  backend_handwritten_history_snapshots.rs  backend_handwritten_parsers_kvr.rs  batch_analysis_test.rs  behavioral_expanded.rs  behavioral_focused.rs  behavioral_heavy.rs  behavioral_ton.rs  behavioral_ultra.rs  bpm_edge_cases.rs  command_layer_test.rs  cross_cutting_tests.rs  da_w_formats_test.rs  daw_scanner_pure_test.rs  db_test.rs  deep_quality_suite.rs  error_handling_tests.rs  export_helpers_edge.rs  export_import_test.rs  extra_unit_tests.rs  extra_unit_tests_2.rs  file_extensions_test.rs  file_format_edge_cases.rs  file_watcher_patterns.rs  fixture_semantics.rs  format_size_tests.rs  handcrafted_tables_fingerprint_grid.rs  handcrafted_tables_kvr.rs  handcrafted_tables_kvr_parse_batch2.rs  handcrafted_tables_massive.rs  handcrafted_tables_normalize_generated.rs  handcrafted_tables_radix_grid.rs  handcrafted_tables_similarity.rs  handwritten_behavior.rs  high_quality_als_xml_tests.rs  high_quality_analysis_tests.rs  (+33 more)
test/: aabb-intersect.test.js  accumulate-product.test.js  ackermann-tiny.test.js  advanced-utilities.test.js  anagram-check.test.js  angle-deg-rad.test.js  app-constants.test.js  argmax-argmin.test.js  array-chunk.test.js  audio-buffer-zero.test.js  audio-engine-ipc.test.js  audio-source.test.js  base-convert.test.js  base64url-data.test.js  basename-ext.test.js  batch-row-path-priority.test.js  batch-select-source.test.js  bg-job-prefs-audit.test.js  binary-gcd.test.js  binary-search.test.js  biquad-normalize.test.js  bisection-root.test.js  bit-count-popcount.test.js  bit-flags.test.js  bit-reverse-uint16.test.js  bit-rotate.test.js  bloom-filter.test.js  box-muller-gaussian.test.js  bresenham-circle.test.js  bresenham-line.test.js  bulk-base64-roundtrip.test.js  bulk-bitwise-demorgan.test.js  bulk-bitwise-distributive.test.js  bulk-fibonacci-identity.test.js  bulk-gcd-identity-powers.test.js  bulk-gcd-lcm-product.test.js  bulk-gcd-symmetry.test.js  bulk-int-add-commutative.test.js  bulk-int-mul-commutative.test.js  bulk-json-roundtrip.test.js  (+319 more)
(+1142 files in other folders)
