[package]
name = "audio-engine"
version = "1.19.0"
edition = "2024"
description = "AUDIO_HAXOR sidecar: cpal input/output device discovery and stream IPC"
authors = ["MenkeTechnologies <MenkeTechnologies@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "pcm"] }
