[package]
name = "audio-engine"
version = "1.20.0"
edition = "2024"
description = "AUDIO_HAXOR sidecar: cpal input/output device discovery and stream IPC"
authors = ["MenkeTechnologies <MenkeTechnologies@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "pcm"] }
rodio = { version = "0.22.2", features = ["symphonia-all"] }
