[package]
name = "audio-haxor"
version = "1.3.0"
description = "Desktop app to scan and manage VST/VST3/AU audio plugins, samples, and DAW projects"
authors = ["MenkeTechnologies <MenkeTechnologies@gmail.com>"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
regex = "1"
walkdir = "2"
rayon = "1"
rand = "0.8"
dirs = "5"
plist = "1"
opener = "0.7"
chrono = "0.4"
urlencoding = "2"
toml = "0.8"
tauri-plugin-dialog = "2.6.0"
libc = "0.2"
num_cpus = "1"
printpdf = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "app_lib"
crate-type = ["rlib"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
debug = 0
opt-level = 1
