[package]
name = "audio-haxor"
version = "1.28.2"
description = "Desktop app to scan and manage VST/VST3/AU audio plugins, samples, and DAW projects"
authors = ["MenkeTechnologies <MenkeTechnologies@gmail.com>"]
edition = "2024"

[dependencies]
# `macos-private-api` is required for `tauri.conf.json > app.macOSPrivateApi` to actually take
# effect — without it, `transparent: true` on macOS is a silent no-op and the WKWebView keeps its
# default opaque white background (CSS `background: transparent` has nothing behind it to show
# through, so the tray popover shows a white rectangle behind the rounded panel).
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
regex = "1"
walkdir = "2"
rayon = "1"
rand = "0.10"
dirs = "6"
plist = "1"
opener = "0.8"
chrono = "0.4"
urlencoding = "2"
toml = "1.1"
tauri-plugin-dialog = "2.7.0"
libc = "0.2"
num_cpus = "1"
# default-features off avoids pulling the HTML/azul stack; we only need low-level ops + PNG images.
printpdf = { version = "0.9", default-features = false, features = ["images", "png"] }
lopdf = "0.40"
flate2 = "1"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "pcm", "isomp4", "mkv", "vorbis"] }
rusqlite = { version = "0.39", features = ["bundled", "functions", "hooks"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
notify = "8"
sysinfo = "0.38"
image_crate = { version = "0.25", default-features = false, features = ["png"], package = "image" }
sha2 = "0.11"
dashmap = "6"
tauri-plugin-drag = "2.1"
base16ct = { version = "1.0.0", features = ["alloc"] }
portable-pty = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6", default-features = false, features = ["alloc"] }
objc2 = { version = "0.6", default-features = false, features = ["exception"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "block2",
    "NSNotification",
    "NSString",
    "NSGeometry",
    "NSValue",
    "NSProcessInfo",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSEvent",
    "NSWindow",
    "NSResponder",
    "NSView",
    "NSImage",
    "NSImageView",
    "NSControl",
    "NSColor",
    "NSGraphicsContext",
    "NSGraphics",
    "block2",
] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "WKWebView",
    "WKSnapshotConfiguration",
    "block2",
    "objc2-app-kit",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
seq-macro = "0.3"

[[bench]]
name = "benchmarks"
harness = false
